--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -2,6 +2,42 @@
   name = Eric Trinh
   email = et.trinity@gmail.com
 
+[github]
+  user = erictrinh
+
+[alias]
+  br = branch
+  cb = "!sh -c 'git branch $1 && git ch $1' -"
+  ctb = "!sh -c 'git cb topics/$1' -"
+
+  ci = commit
+  ch = checkout
+  fc = commit -am 'Initial commit.'
+  cpush = "!sh -c 'git commit -au -m \"$1\" && git push -u origin' -"
+  d = diff
+  st = status --short
+
+  graph = log --graph
+  last = log -n 10
+  url = !git remote -v|sed "'s|.*git[:@]\\(.*\\).git.*|http://\\1|;s|m:|m/|'"|uniq|xargs open
+  whois = "!sh -c 'git log -i -1 --pretty=\"format:%an <%ae>\n\" --author=\"$1\"' -"
+  discard = checkout -- .
+  rmtag = "!sh -c 'git tag -d $1; git push origin :refs/tags/$1'"
+
+[push]
+  default = simple
+
+[core]
+  editor = subl
+  excludesfile = ~/.gitignore
+
+[format]
+  pretty = %Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset
+  graph = true
+
+[log]
+  abbrevCommit = true
+
 # URL shorthands
 # gh:erictrinh/dotfiles
 [url "git@github.com:"]
