Github app changed gitconfig to use git-media

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -50,3 +50,6 @@
   insteadOf = "gist:"
   pushInsteadOf = "gist:"
   pushInsteadOf = "git://gist.github.com/"
+[filter "media"]
+	clean = git-media-clean %f
+	smudge = git-media-smudge %f
