Add apps and fonts

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -51,7 +51,8 @@
   pushInsteadOf = "gist:"
   pushInsteadOf = "git://gist.github.com/"
 [filter "media"]
-	clean = git-media-clean %f
-	smudge = git-media-smudge %f
+	required = true
+	clean = git media clean %f
+	smudge = git media smudge %f
 [color]
 	ui = auto
