Gitconfig changes from Github app

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -56,3 +56,11 @@
 	smudge = git media smudge %f
 [color]
 	ui = auto
+[filter "hawser"]
+	clean = git hawser clean %f
+	smudge = git hawser smudge %f
+	required = true
+[filter "lfs"]
+	clean = git lfs clean %f
+	smudge = git lfs smudge %f
+	required = true
