--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -71,3 +71,5 @@
 [pager]
 	diff = diff-so-fancy | less --tabs=1,5 -RFX
 	show = diff-so-fancy | less --tabs=1,5 -RFX
+[init]
+	defaultBranch = main
